--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -7,11 +7,24 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        include:
+          - component: collector
+          - component: database
+          - component: external_server
+          - component: frontend
+          - component: internal_server
+          - component: ldap
+          - component: notifier
+          - component: proxy
+          - component: renderer
+          - component: testdata
+
     steps:
     - uses: actions/checkout@v3
-    - uses: hadolint/hadolint-action@v2.0.0
+    - name: Hadolint ${{ matrix.component }}
+      uses: hadolint/hadolint-action@v2.0.0
       with:
-        dockerfile: components/collector/Dockerfile
-    - uses: hadolint/hadolint-action@v2.0.0
-      with:
-        dockerfile: components/notifier/Dockerfile
+        dockerfile: components/${{ matrix.component }}/Dockerfile
+
