--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
-    "blueimp-md5": "^2.19.0",
+    "crypto-js": "^4.1.1",
     "fomantic-ui-css": "github:peacekeeper/Fomantic-UI-CSS.git#c94ff9bd5ab897cd3e3facd2c968090da8755dcb",
     "history": "^5.3.0",
     "react": "^17.0.2",
