--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "fomantic-ui-css": "github:peacekeeper/Fomantic-UI-CSS.git#c94ff9bd5ab897cd3e3facd2c968090da8755dcb",
     "history": "^5.3.0",
-    "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-focus-lock": "^2.9.1",
