--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,4 +107,13 @@ workflows:
           context: QualityTime
       - docker/hadolint:
           context: QualityTime
-          dockerfiles: components/collector/Dockerfile:components/database/Dockerfile:components/external_server/Dockerfile:components/frontend/Dockerfile:components/internal_server/Dockerfile:components/ldap/Dockerfile:components/notifier/Dockerfile:components/proxy/Dockerfile:components/renderer/Dockerfile:components/testdata/Dockerfile
+          dockerfiles: "components/collector/Dockerfile:\
+            components/database/Dockerfile:\
+            components/external_server/Dockerfile:\
+            components/frontend/Dockerfile:\
+            components/internal_server/Dockerfile:\
+            components/ldap/Dockerfile:\
+            components/notifier/Dockerfile:\
+            components/proxy/Dockerfile:\
+            components/renderer/Dockerfile:\
+            components/testdata/Dockerfile"
