--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "quality-time-app",
   "version": "4.7.0-rc.6",
   "private": true,
-  "proxy": "http://localhost:5001",
+  "proxy": "http://127.0.0.1:5001",
   "dependencies": {
     "crypto-js": "^4.1.1",
     "fomantic-ui-css": "^2.9.0",
