Set env variables in steps to see whether that makes a difference.

--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -18,6 +18,10 @@ jobs:
       - name: Run application tests
         run: |
           mkdir -p build
+          export ENV=ci
+          export QUALITY_TIME_VERSION=v4.2.0
+          export COMPOSE_PATH_SEPARATOR=':'
+          export COMPOSE_FILE=docker/docker-compose.yml:docker/docker-compose.ci.yml
           docker compose build && docker compose up -d
           docker run -t -w `pwd` -v `pwd`:`pwd` --network=quality-time_default python:3.10.5-bullseye tests/application_tests/ci/test.sh
       - name: Save container logs
