--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -17,12 +17,7 @@ jobs:
           COMPOSE_FILE: docker/docker-compose.yml:docker/docker-compose.ci.yml
         run: |
           mkdir -p build
-          echo "Echoing environment vars"
-          echo $COMPOSE_PATH_SEPARATOR
-          echo $COMPOSE_FILE
-          echo $CI
-          echo "/Echoing environment vars"
-          docker compose build && docker compose up -d
+          docker compose --file docker/docker-compose.yml:docker/docker-compose.ci.yml --build up --detach --wait
           docker run -t -w `pwd` -v `pwd`:`pwd` --network=quality-time_default python:3.10.5-bullseye tests/application_tests/ci/test.sh
       - name: Save container logs
         if: always()
