--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -13,11 +13,9 @@ jobs:
         env:
           QUALITY_TIME_VERSION: v4.2.0
           ENV: ci
-          COMPOSE_PATH_SEPARATOR: ':'
-          COMPOSE_FILE: docker/docker-compose.yml:docker/docker-compose.ci.yml
         run: |
           mkdir -p build
-          docker compose --file docker/docker-compose.yml --file docker/docker-compose.ci.yml up --build --detach --wait
+          docker compose --file docker/docker-compose.yml --file docker/docker-compose.ci.yml --project-name quality-time up --build --detach --wait
           docker run -t -w `pwd` -v `pwd`:`pwd` --network=container:quality-time-www-1 python:3.10.5-bullseye tests/application_tests/ci/test.sh
       - name: Save container logs
         if: always()
