--- a/components/shared_data_model/setup.cfg
+++ b/components/shared_data_model/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shared_data_model
-version = 4.3.0-rc.2
+version = 4.3.0
 author = Quality-time team
 author_email = quality-time@ictu.nl
 url = https://github.com/ICTU/quality-time
