Supress warning for react-hash-link, there seems to be no alternative.

--- a/.github/deadpendency.yaml
+++ b/.github/deadpendency.yaml
@@ -86,4 +86,5 @@ ignore-failures:
   python:
     - behave
   javascript:
-    - semantic-ui-css
+    - react-hash-link  # No alternative available AFAICT
+    - semantic-ui-css  # https://github.com/Semantic-Org/Semantic-UI-CSS/issues/81
