--- a/components/external_server/setup.cfg
+++ b/components/external_server/setup.cfg
@@ -28,7 +28,7 @@ ignore_missing_imports = true
 [mypy-ldap3.core]
 ignore_missing_imports = true
 
-[mypy-lxml.html.clean]
+[mypy-lxml.*]
 ignore_missing_imports = true
 
 [mypy-pymongo]
