--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:5001",
   "dependencies": {
     "crypto-js": "^4.1.1",
-    "fomantic-ui-css": "github:peacekeeper/Fomantic-UI-CSS.git#c94ff9bd5ab897cd3e3facd2c968090da8755dcb",
+    "fomantic-ui-css": "^2.9.0",
     "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
