Pass --quiet via the docker compose file instead of hardcoding it in the Dockerfile.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       - ALL
   database:
     image: ictu/quality-time_database:${QUALITY_TIME_VERSION}
+    command: --quiet
     restart: always
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
