The pragma's to suppress uncovered unit test and uncovered feature test code overlapped, cuasing suppressions of uncovered feature test code to also suppress uncovered unit test code.

--- a/tests/feature_tests/.coveragerc
+++ b/tests/feature_tests/.coveragerc
@@ -11,7 +11,7 @@ concurrency =
 # Regexes for lines to exclude from consideration
 exclude_lines =
     pragma: no cover
-    pragma: no cover-behave
+    pragma: no feature-test-cover
     raise NotImplementedError
     raise ValueError
     if TYPE_CHECKING:
