--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,3 +80,5 @@ jobs:
           context: components/ldap
           tags: ictu/quality-time_testldap:${{ steps.get_version.outputs.version }}
           push: true
+      - name: Anchore SBOM Action
+        uses: anchore/sbom-action@v0.13.0
