--- a/components/shared_server_code/setup.cfg
+++ b/components/shared_server_code/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shared_server_code
-version = 4.6.0-rc.5
+version = 4.6.0
 author = Quality-time team
 author_email = quality-time@ictu.nl
 url = https://github.com/ICTU/quality-time
