--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -7,8 +7,8 @@
     "crypto-js": "^4.1.1",
     "fomantic-ui-css": "^2.9.0",
     "history": "^5.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.2",
     "react-grid-layout": "^1.3.4",
     "react-hash-link": "1.0.1",
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --maxWorkers 2",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,10 +40,12 @@
   ],
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^13.1.0",
     "@testing-library/user-event": "^14.4.3",
     "react-scripts": "5.0.1",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^18.2.0"
+  },
+  "resolutions": {
+    "dayzed": "3.2.3"
   }
 }
