--- a/components/shared_data_model/pyproject.toml
+++ b/components/shared_data_model/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-    "setuptools>=60.5",
-    "wheel"
+    "setuptools==65.6.0",
+    "wheel==0.38.4"
 ]
 build-backend = "setuptools.build_meta"
 
