--- a/components/shared_data_model/pyproject.toml
+++ b/components/shared_data_model/pyproject.toml
@@ -5,6 +5,32 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "shared_data_model"
+version = "4.7.0-rc.2"
+authors = [
+  { name="FQuality-time team", email="quality-time@ictu.nl" },
+]
+readme = "README.md"
+requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
+    "License :: OSI Approved :: Apache Software License",
+    "Natural Language :: English"
+]
+dependencies = [
+    "pydantic == 1.10.2",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/ICTU/quality-time"
+"Issue tracker" = "https://github.com/ICTU/quality-time/issues"
+"Changelog" = "https://quality-time.readthedocs.io/en/latest/changelog.html"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.black]
 line-length = 120
 include = '\.pyi?$'
@@ -18,3 +44,13 @@ exclude = '''
   )/
 )
 '''
+
+[tool.mypy]
+plugins = "pydantic.mypy"
+html_report = "build/mypy"
+ignore_missing_imports = false
+incremental = false
+warn_redundant_casts = true
+warn_return_any = true
+warn_unreachable = true
+warn_unused_ignores = true
