--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,23 +6,24 @@ orbs:
 jobs:
   unittest_backend:
     docker:
-      - image: cimg/python:3.10.6
+      - image: cimg/python:3.10.8
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
-    parallelism: 6
+    parallelism: 7
     steps:
       - checkout
       - run: |
           case $CIRCLE_NODE_INDEX in
-            0) component=collector;;
-            1) component=notifier;;
-            2) component=internal_server;;
-            3) component=external_server;;
-            4) component=shared_data_model;;
-            5) component=shared_server_code;;
+            0) component=component/collector;;
+            1) component=component/notifier;;
+            2) component=component/internal_server;;
+            3) component=component/external_server;;
+            4) component=component/shared_data_model;;
+            5) component=component/shared_server_code;;
+            6) component=tests/feature_tests;;
           esac
-          cd components/$component
+          cd $component
           python -m venv venv
           . venv/bin/activate
           ci/pip-install.sh
@@ -69,7 +70,7 @@ jobs:
           export COMPOSE_PATH_SEPARATOR=':'
           export COMPOSE_FILE=docker/docker-compose.yml:docker/docker-compose.ci.yml
           docker compose build && docker compose up -d
-          docker run -it -w `pwd` -v `pwd`:`pwd` --network=container:quality-time-www-1 python:3.10.6-bullseye tests/application_tests/ci/test.sh
+          docker run -it -w `pwd` -v `pwd`:`pwd` --network=container:quality-time-www-1 python:3.10.8-bullseye tests/application_tests/ci/test.sh
           docker compose logs > build/containers.log
       - run:
           name: Save container logs on failure
