--- a/release/.bumpversion-rc.cfg
+++ b/release/.bumpversion-rc.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-rc\.(?P<rc>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}-rc.{rc}
 	{major}.{minor}.{patch}
 current_version = 4.7.0-rc.2
@@ -43,10 +43,10 @@ replace = v{new_version}
 search = QUALITY_TIME_VERSION = "{current_version}"
 replace = QUALITY_TIME_VERSION = "{new_version}"
 
-[bumpversion:file:../components/shared_data_model/setup.cfg]
-search = version = {current_version}
-replace = version = {new_version}
+[bumpversion:file:../components/shared_data_model/pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
-[bumpversion:file:../components/shared_server_code/setup.cfg]
-search = version = {current_version}
-replace = version = {new_version}
+[bumpversion:file:../components/shared_server_code/pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
