--- a/components/shared_server_code/pyproject.toml
+++ b/components/shared_server_code/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 name = "shared_server_code"
 version = "4.7.0-rc.2"
 authors = [
-  { name="FQuality-time team", email="quality-time@ictu.nl" },
+  { name="Quality-time team", email="quality-time@ictu.nl" },
 ]
 readme = "README.md"
 requires-python = ">=3.10"
@@ -24,7 +24,7 @@ dependencies = [
     "cryptography == 38.0.3",
     "packaging == 21.3",
     "pydantic == 1.10.2",
-    "pymongo == 4.3.2"
+    "pymongo == 4.3.3"
 ]
 
 [tool.setuptools.packages.find]
