--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - COLLECTOR_MEASUREMENT_FREQUENCY=${COLLECTOR_MEASUREMENT_FREQUENCY:-900}
       - COLLECTOR_MEASUREMENT_LIMIT=${COLLECTOR_MEASUREMENT_LIMIT:-30}
       - COLLECTOR_SLEEP_DURATION=${COLLECTOR_SLEEP_DURATION:-20}
+      - COLLECTOR_LOG_LEVEL=${COLLECTOR_LOG_LEVEL:-WARNING}
     depends_on:
       - internal_server
     cap_drop:
@@ -40,6 +41,7 @@ services:
       - INTERNAL_SERVER_HOST=${INTERNAL_SERVER_HOST:-internal_server}
       - INTERNAL_SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
       - NOTIFIER_SLEEP_DURATION=${NOTIFIER_SLEEP_DURATION:-60}
+      - NOTIFIER_LOG_LEVEL=${NOTIFIER_LOG_LEVEL:-WARNING}
     depends_on:
       - internal_server
     cap_drop:
@@ -48,6 +50,7 @@ services:
     image: ictu/quality-time_external_server:${QUALITY_TIME_VERSION}
     environment:
       - EXTERNAL_SERVER_PORT=${EXTERNAL_SERVER_PORT:-5001}
+      - EXTERNAL_SERVER_LOG_LEVEL=${EXTERNAL_SERVER_LOG_LEVEL:-WARNING}
       - DATABASE_URL=${DATABASE_URL:-mongodb://root:root@database:27017}
       - LDAP_URL=${LDAP_URL:-ldap://ldap:389}
       - LDAP_ROOT_DN=${LDAP_ROOT_DN:-dc=example,dc=org}
@@ -67,6 +70,7 @@ services:
     image: ictu/quality-time_internal_server:${QUALITY_TIME_VERSION}
     environment:
       - INTERNAL_SERVER_PORT=${INTERNAL_SERVER_PORT:-5002}
+      - INTERNAL_SERVER_LOG_LEVEL=${INTERNAL_SERVER_LOG_LEVEL:-WARNING}
       - DATABASE_URL=${DATABASE_URL:-mongodb://root:root@database:27017}
       - LOAD_EXAMPLE_REPORTS=${LOAD_EXAMPLE_REPORTS:-True}
     depends_on:
