--- a/tests/feature_tests/requirements/requirements-dev.txt
+++ b/tests/feature_tests/requirements/requirements-dev.txt
@@ -626,7 +626,7 @@ requests==2.28.1 \
     #   -r ../../../requirements/requests.in
     #   cachecontrol
     #   safety
-    #   sseclient
+    #   ssec
 resolvelib==0.9.0 \
     --hash=sha256:40ab05117c3281b1b160105e10075094c5ab118315003c922b77673a365290e1 \
     --hash=sha256:597adcbdf81d62d0cde55d90faa8e79187ec0f18e5012df30bd7a751b26343ae
@@ -696,7 +696,6 @@ six==1.16.0 \
     #   behave
     #   html5lib
     #   parse-type
-    #   sseclient
 smmap==5.0.0 \
     --hash=sha256:2aba19d6a040e78d8b09de5c57e96207b09ed71d8e55ce0959eeee6c8e190d94 \
     --hash=sha256:c840e62059cd3be204b0c9c9f74be2c09d5648eddd4580d9314c3ecde0b30936
@@ -705,8 +704,9 @@ sortedcontainers==2.4.0 \
     --hash=sha256:25caa5a06cc30b6b83d11423433f65d1f9d76c4c6a0c90e3379eaa43b9bfdb88 \
     --hash=sha256:a163dcaede0f1c021485e957a39245190e74249897e2ae4b2aa38595db237ee0
     # via cyclonedx-python-lib
-sseclient==0.0.27 \
-    --hash=sha256:b2fe534dcb33b1d3faad13d60c5a7c718e28f85987f2a034ecf5ec279918c11c
+ssec==2.0.0 \
+    --hash=sha256:b509f5fccd31f1bdcb36c2f2a96e8cc886b90f770285f61c10d7a3b7412604d9 \
+    --hash=sha256:ff8288c634deef470fa5d07442aa0877a7aec03eda2d9982612cfe6a94fd98af
     # via -r requirements-dev.in
 stevedore==4.1.1 \
     --hash=sha256:7f8aeb6e3f90f96832c301bff21a7eb5eefbe894c88c506483d355565d88cc1a \
