Fix quality issues.

--- a/tests/feature_tests/pyproject.toml
+++ b/tests/feature_tests/pyproject.toml
@@ -10,6 +10,6 @@ warn_unused_ignores = true
 [[tool.mypy.overrides]]
 module = [
     "behave",
-    "sseclient"
+    "ssec"
 ]
 ignore_missing_imports = true
