--- a/docs/requirements/requirements-dev.in
+++ b/docs/requirements/requirements-dev.in
@@ -1,7 +1,7 @@
 -r ../../requirements/dev.in
-furo==2022.9.29
+furo==2022.12.7
 gitpython==3.1.30
 myst-parser==0.18.1
-Sphinx==4.5.0
+Sphinx==5.3.0  # Can't upgrade to Sphinx 6 because sphinx-copybutton 0.5.1 requires Sphinx < 6.
 sphinx-copybutton==0.5.1
-sphinx_panels==0.6.0
+sphinx_design==0.3.0
